# workflow

./: .gitignore  DATA.xlsx  Readme.md  app_githuburl.xlsx  generate_vfind_tasks.py  log_0409.txt  nvd_api.py  run_codewiki_pipline.py  test_eval.py  workflow_unified.py
VulnTriage/: .gitignore  .gitmodules  PLAN.md  README.md  TODO.md  pyproject.toml  requirement.txt  setup.py
VulnTriage/docs/: calltrace_mapper.md  env.md  issues.md  recon.md  status.md  system_structruue.md  verification_agent.md  vfinder.md
VulnTriage/docs/test_docs/: JAVA_RECON_REPORT.md  LIBS_TEST_SUMMARY.md  TEST_IMPROVEMENTS.md  TEST_REPORT_LIBS.md
VulnTriage/patterns/: README.md
VulnTriage/patterns/java/: config.yaml  entry.yaml  sanitizer.yaml  sink.yaml
VulnTriage/patterns/python/: config.yaml  entry.yaml  sanitizer.yaml  sink.yaml
VulnTriage/patterns/tech_stack/: tech_stack.yaml
VulnTriage/src/: vulntriage_cli.py
VulnTriage/src/callmap/: __init__.py  trace.py
VulnTriage/src/callmap/ast/: __init__.py  base.py  java.py  py.py
VulnTriage/src/commands/: all.py  recon.py  tools.py  trace.py  verify.py  vfind.py
VulnTriage/src/core/: cli_common.py  config.py  logging.py
VulnTriage/src/recon/: detect_lang.py  matcher.py  matcher_java.py  matcher_py.py  models.py  tech_stack_matcher.py
VulnTriage/src/storage/: reader.py  writer.py
VulnTriage/src/utils/: __init__.py  agent_runtime.py
VulnTriage/src/verify/: __init__.py  agent.py  agents.md
VulnTriage/src/vfinder/: __init__.py  agent.py  agents.md  codex_client.py  demo_vulnerability.py
eval/: .gitignore  README.md  (+3 more)
(+52 files in other folders)
